--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@ margin: 0;
   margin: 10px;
   background: none;
 }
+
+.effect {
+  transition: transform 0.3s, background-position 0.5s ease;
+}
+.effect:hover {
+  transform: translateY(10px);
+  background-position: right bottom;
+}
